CSS - Esstilização do header

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ button:hover {
   cursor: pointer;
 } */
 
+/* ------------------ WRAPPER BELOW ------------------- */
+
 .wrapper {
   max-width: 46rem;
   margin: 0 auto;
@@ -70,4 +72,13 @@ button:hover {
   /* .wrapper {
     grid-template-columns: 1fr;
   } */
+}
+
+/* ------------------ HEADER BELOW ------------------- */
+
+header {
+  display: flex;
+  justify-content: center;
+
+  padding: calc(6.75rem - 2rem) 0;
 }
