--- a/style.css
+++ b/style.css
@@ -129,3 +129,17 @@ header {
   background: var(--black);
   color: var(--gray-200);
 } */
+
+/* ------------------ COUNTER BELOW ------------------- */
+
+.tasks_counter {
+  max-width: 46rem;
+  padding: 1.25rem;
+  margin: 48px auto;
+
+  border-top: 3px solid var(--gray-400);
+  border-bottom: 3px solid var(--gray-400);
+
+  display: flex;
+  justify-content: space-between;
+}
