CSS - Estilização da lista de tarefas pt. II

--- a/style.css
+++ b/style.css
@@ -200,3 +200,19 @@ header {
 .empty_tasks div p:first-child {
   font-weight: bold;
 }
+
+/* ------------------ TASKS LIST BELOW ------------------- */
+.tasks_list {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  max-width: 46rem;
+}
+
+
+
+/* ------------------ HIDDEN BELOW ------------------- */
+.hidden {
+  display: none;
+}
