--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   --gray-100: #d9d9d9;
   --gray-200: #808080;
   --gray-300: #707070;
+  --gray-350: #303030;
   --gray-400: #363636;
   --gray-500: #222222;
   --black: #1a1a1a;
@@ -13,6 +14,7 @@
   --green-700: #093d24;
   --yellow-500: #FFD231;
   --yellow-700: #644f04;
+  --red-500: #DE4E4E;
 }
 
 :focus {
@@ -48,7 +50,8 @@ button {
 }
 
 input:hover,
-button:hover {
+button:hover,
+i:hover {
   cursor: pointer;
 }
 
@@ -210,6 +213,43 @@ header {
   max-width: 46rem;
 }
 
+/* ------------------ TASK BELOW ------------------- */
+.task {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  background: var(--gray-350);
+  padding: 24px;
+  border-radius: 8px;
+}
+
+.task+.task {
+  margin-top: 1rem;
+}
+
+.task div {
+  display: flex;
+  align-items: center;
+}
+
+.task div i  {
+  font-size: 28px;
+}
+
+.task div p {
+  margin: 0 16px;
+  color: var(white);
+}
+
+.task .delete_btn  {
+  font-size: 24px;
+  color: var(--gray-200);
+}
+
+.task .delete_btn:hover  {
+  color: var(--red-500);
+}
 
 
 /* ------------------ HIDDEN BELOW ------------------- */
