CSS - Estilização da lista de tarefas pt IV

--- a/style.css
+++ b/style.css
@@ -251,6 +251,28 @@ header {
   color: var(--red-500);
 }
 
+/* ------------------ TODO TASK BELOW ------------------- */
+.todo .check_btn {
+  color: var(--gray-200);
+}
+
+.todo .check_btn:hover {
+  color: var(--green-500);
+}
+
+/* ------------------ DONE TASK BELOW ------------------- */
+.done div .risked {
+  text-decoration: line-through;
+  color: var(--gray-200);
+}
+
+.done .check_btn {
+  color: var(--green-500);
+}
+
+.done .check_btn:hover {
+  color: var(--yellow-500);
+}
 
 /* ------------------ HIDDEN BELOW ------------------- */
 .hidden {
